--- a/instat/dlgRegressionSimple.sw-KE.resx
+++ b/instat/dlgRegressionSimple.sw-KE.resx
@@ -171,15 +171,6 @@
   <data name="lblResponseVariable.TabIndex" xml:space="preserve" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
-  <data name="ucrReceiverSingleB.Location" xml:space="preserve" type="System.Drawing.Point, System.Drawing">
-    <value>302, 56</value>
-  </data>
-  <data name="ucrReceiverSingleB.Size" xml:space="preserve" type="System.Drawing.Size, System.Drawing">
-    <value>106, 26</value>
-  </data>
-  <data name="ucrReceiverSingleB.TabIndex" xml:space="preserve" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
   <data name="ucrReceiverSingleA.Location" xml:space="preserve" type="System.Drawing.Point, System.Drawing">
     <value>302, 24</value>
   </data>
@@ -251,5 +242,38 @@
   </data>
   <data name="ucrBase.TabIndex" xml:space="preserve" type="System.Int32, mscorlib">
     <value>1</value>
+  </data>
+  <data name="ucrReceiverSingleB.Location" xml:space="preserve" type="System.Drawing.Point, System.Drawing">
+    <value>302, 56</value>
+  </data>
+  <data name="ucrReceiverSingleB.Size" xml:space="preserve" type="System.Drawing.Size, System.Drawing">
+    <value>106, 26</value>
+  </data>
+  <data name="ucrReceiverSingleB.TabIndex" xml:space="preserve" type="System.Int32, mscorlib">
+    <value>12</value>
+  </data>
+  <data name="Label1.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="lblResidualMsg.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkLackFit.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkAnovaTable.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkShowPlots.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkSiginificance.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="lblConfidence.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="lblResponseVariable.ImeMode" xml:space="preserve" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
 </root>
