--- a/instat/MultilingualResources/instat.sw-KE.xlf
+++ b/instat/MultilingualResources/instat.sw-KE.xlf
@@ -647,6 +647,10 @@
           <source>Descending</source>
           <target state="new">Descending</target>
         </trans-unit>
+        <trans-unit id="Anova_One_Way" translate="yes" xml:space="preserve">
+          <source>Anova One Way</source>
+          <target state="new">Anova One Way</target>
+        </trans-unit>
       </group>
     </body>
   </file>
@@ -1805,6 +1809,14 @@
     </header>
     <body>
       <group id="INSTAT/DLGONEWAYANOVE.RESX" datatype="resx" />
+    </body>
+  </file>
+  <file datatype="xml" source-language="en-US" target-language="sw-KE" original="INSTAT/DLGANOVAONEWAY.RESX" tool-id="MultilingualAppToolkit" product-name="n/a" product-version="n/a" build-num="n/a">
+    <header>
+      <tool tool-id="MultilingualAppToolkit" tool-name="Multilingual App Toolkit" tool-version="4.0.1466.0" tool-company="Microsoft" />
+    </header>
+    <body>
+      <group id="INSTAT/DLGANOVAONEWAY.RESX" datatype="resx" />
     </body>
   </file>
 </xliff>
