--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -625,4 +625,7 @@
   <data name="Save_results_in" xml:space="preserve">
     <value>Save results in</value>
   </data>
+  <data name="Data_to_be_plotted" xml:space="preserve">
+    <value>Data to be plotted</value>
+  </data>
 </root>
